--- a/SpringBasics/.vscode/settings.json
+++ b/SpringBasics/.vscode/settings.json
@@ -67,6 +67,41 @@
         "/lib/java-lib/spring-framework-5.3.8/libs/spring-aop-5.3.8-javadoc.jar",
         "/lib/java-lib/spring-framework-5.3.8/libs/spring-aop-5.3.8-sources.jar",
         "/lib/java-lib/spring-framework-5.3.8/libs/spring-aop-5.3.8.jar",
-        "/lib/java-lib/commons-logging-1.2/commons-logging-1.2.jar"
+        "/lib/java-lib/commons-logging-1.2/commons-logging-1.2.jar",
+        "/lib/java-lib/javax.annotation-api-1.2-sources.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/websocket-api.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-websocket.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-util.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-util-scan.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-jni.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-jdbc.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-zh-CN.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-ru.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-pt-BR.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-ko.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-ja.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-fr.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-es.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-de.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-i18n-cs.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-dbcp.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-coyote.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/tomcat-api.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/servlet-api.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/jsp-api.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/jaspic-api.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/jasper.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/jasper-el.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/jakartaee-migration-1.0.0-shaded.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/el-api.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/ecj-4.18.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/catalina.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/catalina-tribes.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/catalina-storeconfig.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/catalina-ssi.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/catalina-ha.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/catalina-ant.jar",
+        "/lib/java-lib/apache-tomcat-10.0.6/lib/annotations-api.jar",
+        "/lib/java-lib/javaee.jar"
     ]
 }
